# symcc

./: CMakeLists.txt
compiler/: Runtime.cpp
runtime/: CMakeLists.txt
runtime.bak/: CMakeLists.txt
runtime.bak/include/: Hypercall.h  RuntimeCommon.h
runtime.bak/src/: Hypercall.c  LibcWrappers.c  RuntimeCommon.c
runtime.bak/src/backends/hypercall/: CMakeLists.txt  Runtime.c  Runtime.h
runtime/include/: Hypercall.h  LibcWrappers.h  RuntimeCommon.h
runtime/src/: CMakeLists.txt  Hypercall.c  LibcWrappers.c  RuntimeCommon.c
runtime/src/backends/hypercall/: CMakeLists.txt  Runtime.c  Runtime.c.bak  Runtime.h
runtime/src/backends/hypercall/include/: GarbageCollection.h  RuntimeCommon.h
runtime/src/backends/mock/: CMakeLists.txt  Runtime.cpp  Runtime.h
runtime/src/include/: RuntimeCommon.h
test/: CMakeLists.txt
